Fix build issues.